--- a/estilo.css
+++ b/estilo.css
@@ -24,4 +24,8 @@ footer {
     color: white;
     text-align: center;
     font-style: italic;
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+    height: 80px;
 }
